<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/dialog_opml_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/opml_import_instructions"
        />

    <RadioGroup
        android:id="@+id/radio_import_export_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/opml_radio_import"
        android:id="@+id/radio_import" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/opml_radio_export"
        android:id="@+id/radio_export" />

    </RadioGroup>

</LinearLayout>