<menu xmlns:android="http://schemas.android.com/apk/res/android" >

            <item
        android:id="@+id/menu_sync"
        android:icon="?attr/sync_icon"
        android:orderInCategory="5"
        android:showAsAction="always"
        android:title="@string/menu_sync"/>
    <item
        android:id="@+id/menu_clear_playlist"
        android:orderInCategory="200"
        android:title="@string/menu_clear_playlist">
    </item>
    <item
        android:id="@+id/menu_download_all"
        android:orderInCategory="300"
        android:title="@string/menu_download_all">
    </item>
    <item
        android:id="@+id/menu_import"
        android:orderInCategory="400"
        android:title="@string/menu_import">
    </item>

</menu>