...
            android:layout_marginBottom="20dp"
            android:text="@string/subscription_instruction"
            android:layout_below="@+id/subscription_empty_title"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/import_opml_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subscription_empty_text"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:text="@string/opml_radio_import" />
...
