<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/discovery_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/discovery_search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--
        Prevent the SearchView from popping up the Keyboard
        http://stackoverflow.com/questions/21624282/searchview-gains-focus-and-opens-keyboard-when-returning-from-another-activity

        android:focusableInTouchMode="true"
        -->
        <android.support.v7.widget.CardView
            android:id="@+id/discovery_searchView_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:focusableInTouchMode="true"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:id="@+id/discovery_searchView_container_relative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <android.support.v7.widget.SearchView
                android:id="@+id/discovery_searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:queryHint="@string/search_query_hint"
                app:defaultQueryHint="testing"
                app:iconifiedByDefault="false"
                android:layout_marginBottom="3dp"
                />

                <ImageButton
                    android:id="@+id/discovery_searchIcon"
                    android:layout_width="42dp"
                    android:layout_height="25dp"
                    android:elevation="5dp"
                    android:layout_alignTop="@id/discovery_searchView"
                    android:layout_alignBottom="@id/discovery_searchView"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:paddingRight="12dp"
                    android:scaleType="centerInside"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/discovery_directory_icon" />

            <ProgressBar
                android:id="@+id/discovery_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/discovery_searchView"
                android:visibility="gone"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:indeterminate="true"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/search_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="4dp"
            android:paddingBottom="11dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/discovery_searchView_container"
            />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_result_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls"
        android:layout_below="@+id/discovery_search_container"
        />

</RelativeLayout>
