...

    <string name="authenticate_feed_username">Username</string>
    <string name="authenticate_feed_password">Password</string>

    <!-- Used for 1.1X speed-->
    <string name="speed_multiplier">%1$.1f X</string>
    <string name="discovery_directory_icon">Podcast directory (search engine)</string>
    <string name="subscription_instruction_title">You are not subscribed to any podcasts</string>
    <string name="dialog_playback_boost_volume">Boost volume</string>

    <!-- The audio engine has an option to remove periods of silence in an audio file. -->
    <string name="dialog_playback_removile_silence">Remove silence</string>
    <string name="menu_web_player">Web Player (beta)</string>
...
    <string name="intro_settings_title">Network settings</string>
    <string name="intro_settings_done">That\'s it! Happy podcasting</string>
    <string name="app_intro_welcome_title">Welcome to SoundWaves</string>
    <string name="app_intro_welcome_description">Please spend 10 seconds reading these intro pages</string>
    <string name="appintro_settings_description">Please review these settings in order to avoid unwanted data consumption</string>

    <string name="webservices_discovery_engine_gpodder">gpodder.net</string>
    <string name="webservices_discovery_engine_itunes">iTunes</string>
    <string name="webservices_discovery_engine_audiosearch">AudioSear.ch</string>
    <string name="webservices_discovery_engine_unknown">Unknown search engine</string>
    <string name="subscription_authentication_required">Authentication Required</string>
    <string name="subscription_press_to_authenticate">Press to authenticate</string>
    <string name="star_subscription">Star subscriptions</string>
    <string name="remove_episode_from_playlist">Remove episode from playlist</string>
    <string name="import_subscription_confirm">Import</string>
...
