...
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/result_image"
            android:layout_toLeftOf="@id/result_subscribe_switch">

            <TextView
                android:id="@+id/result_title"
                android:hint="Podcats Title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginLeft="10dp"
...
